<resources>
    <string name="app_name">AlceaPass</string>
    <string name="login_btn">Войти</string>
    <string name="login_hint">Введите мастер пароль:</string>
    <string name="main_title">Список сохраненных паролей</string>
    <string name="settings_title">Настройки</string>>
    <string name="profile_create_btn">Создать профиль</string>
    <string name="master_password_hint">Придумайте мастер-пароль:</string>
    <string name="profile_hint">Введите имя профиля:</string>
    <string name="profile_spinner_hint">Профиль:</string>
    <string name="settings_profile"><u>Профиль: </u></string>
    <string-array name="filter">
        <item>По названию</item>
        <item>По дате создания</item>
    </string-array>
</resources>